--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>com.jarq.App</mainClass>
+              <mainClass>com.jarq.Application</mainClass>
             </manifest>
           </archive>
         </configuration>
